@@ -472,6 +472,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * New maintenance script to show the cached statistics : showStats.php.
 * New special page to list available interwikis [[Special:Listinterwikis]]
 * Count deleted edits when regenerating total edits in maintenance/initStats.php
+* (bug 3706) Allow users to be exempted from IP blocks. The ipblock-exempt permission
+  key has been added to enable this behaviour, by default assigned to sysops.
 
 == Languages updated ==
 
